# PowershellScripts

./: .gitignore  README.md
PowershellScripts/Find-NpmVulnerabilities/: Find-NpmVulnerabilities.ps1
PowershellScripts/Find-Nuget/: Find-Nuget.ps1
PowershellScripts/Remove-BinObjFiles/: Remove-BinObjFiles.ps1
PowershellScripts/Test-MultipleConnections/: Test-MultipleConnections.Tests.ps1  Test-MultipleConnections.ps1
Test-MultipleConnections/: Test-MultipleConnections.ps1
python_scripts/: pyproject.toml
python_scripts/src/: file_finder.py  package_finder.py
